--- a/TruckTrailer_LateralDynamics.ipynb
+++ b/TruckTrailer_LateralDynamics.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "lhdBNjbqGnlZ",
     "slideshow": {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "YeMUilYFGzGg",
     "slideshow": {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "OGANRqDnHCY2",
     "slideshow": {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -178,9 +178,9 @@
    "source": [
     "\n",
     "\n",
-    "$ r_h^i = r_h^i + R_2*r_2^{b_2} $\n",
+    "$ r_2^i = r_h^i + R_2*r_2^{b_2} $\n",
     "\n",
-    "$ r_h^{b_1} = \\begin{bmatrix} -l_h.cos(\\psi_1)-l_{f_2}.cos(\\psi_2)+x \\\\ -l_h.sin(\\psi_1)-l_{f_2}.sin(\\psi_2)+y \\\\ 0 \\end{bmatrix} $\n",
+    "$ r_2^{i} = \\begin{bmatrix} -l_h.cos(\\psi_1)-l_{f_2}.cos(\\psi_2)+x \\\\ -l_h.sin(\\psi_1)-l_{f_2}.sin(\\psi_2)+y \\\\ 0 \\end{bmatrix} $\n",
     "\n"
    ]
   },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "id": "M19YDCb_K0CL",
     "slideshow": {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "id": "tEANtSJBOCa1"
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "[                                                   0]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "[       0]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "[      0]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "[      0]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "[                                                                         0]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "[                                                                         0]]))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
        "[F_f_y_1*l_f1 - F_r_y_1*l_r1 - F_x_12*l_h*sin(psi_1) + F_y_12*l_h*cos(psi_1)]]))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "[     0]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "[      0]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
        "[                                               0]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "[                                               0]]))"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "[-F_r_y_2*l_r2 - F_x_12*l_f_2*sin(psi_2) + F_y_12*l_f_2*cos(psi_2)]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +972,7 @@
        "[           0,             0, 0]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "[-F_r_y_2*l_r2 - F_x_12*l_f_2*sin(psi_2) + F_y_12*l_f_2*cos(psi_2)]]))"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "[                                                                                                                                Izz_trailer*\\ddot{\\psi_2}]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1091,7 @@
        "[Izz_trailer*\\ddot{\\psi_2} + \\ddot{\\psi_1}*l_f_2*l_h*m_trailer*cos(psi_1 - psi_2) + \\ddot{\\psi_2}*l_f_2**2*m_trailer + \\ddot{x}*l_f_2*m_trailer*sin(psi_2) - \\ddot{y}*l_f_2*m_trailer*cos(psi_2) - \\dot{\\psi_1}**2*l_f_2*l_h*m_trailer*sin(psi_1 - psi_2)]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "[          -F_r_y_2*l_r2 - F_x_12*l_f_2*sin(psi_2) + F_y_12*l_f_2*cos(psi_2)]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
        "[                                                                                   -F_r_y_2*(l_f_2 + l_r2)]])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "Matrix([[F_r_x_2*cos(psi_2) - F_r_y_2*sin(psi_2) + (-F_f_x_1 + F_r_x_1)*cos(psi_1) - (F_f_y_1 + F_r_y_1)*sin(psi_1)]])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -1214,13 +1214,137 @@
        "[                                                                                   -F_r_y_2*(l_f_2 + l_r2)]]))"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Eq(lhs,rhs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a =(m_truck*v_dot_truck_wor.transpose()*j_trans_truck).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}m_{trailer} \\left(\\ddot{\\psi_1} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\ddot{\\psi_2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)} + \\ddot{x} + \\dot{\\psi_1}^{2} l_{h} \\cos{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)}\\right)\\\\m_{trailer} \\left(- \\ddot{\\psi_1} l_{h} \\cos{\\left(\\psi_{1} \\right)} - \\ddot{\\psi_2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)} + \\ddot{y} + \\dot{\\psi_1}^{2} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)}\\right)\\\\l_{h} m_{trailer} \\left(\\ddot{\\psi_1} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\ddot{\\psi_2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)} + \\ddot{x} + \\dot{\\psi_1}^{2} l_{h} \\cos{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)}\\right) \\sin{\\left(\\psi_{1} \\right)} - l_{h} m_{trailer} \\left(- \\ddot{\\psi_1} l_{h} \\cos{\\left(\\psi_{1} \\right)} - \\ddot{\\psi_2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)} + \\ddot{y} + \\dot{\\psi_1}^{2} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)}\\right) \\cos{\\left(\\psi_{1} \\right)}\\\\l_{f 2} m_{trailer} \\left(\\ddot{\\psi_1} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\ddot{\\psi_2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)} + \\ddot{x} + \\dot{\\psi_1}^{2} l_{h} \\cos{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)}\\right) \\sin{\\left(\\psi_{2} \\right)} - l_{f 2} m_{trailer} \\left(- \\ddot{\\psi_1} l_{h} \\cos{\\left(\\psi_{1} \\right)} - \\ddot{\\psi_2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)} + \\ddot{y} + \\dot{\\psi_1}^{2} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)}\\right) \\cos{\\left(\\psi_{2} \\right)}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[                                                                                                                                                                                              m_trailer*(\\ddot{\\psi_1}*l_h*sin(psi_1) + \\ddot{\\psi_2}*l_f_2*sin(psi_2) + \\ddot{x} + \\dot{\\psi_1}**2*l_h*cos(psi_1) + \\dot{\\psi_2}**2*l_f_2*cos(psi_2))],\n",
+       "[                                                                                                                                                                                             m_trailer*(-\\ddot{\\psi_1}*l_h*cos(psi_1) - \\ddot{\\psi_2}*l_f_2*cos(psi_2) + \\ddot{y} + \\dot{\\psi_1}**2*l_h*sin(psi_1) + \\dot{\\psi_2}**2*l_f_2*sin(psi_2))],\n",
+       "[    l_h*m_trailer*(\\ddot{\\psi_1}*l_h*sin(psi_1) + \\ddot{\\psi_2}*l_f_2*sin(psi_2) + \\ddot{x} + \\dot{\\psi_1}**2*l_h*cos(psi_1) + \\dot{\\psi_2}**2*l_f_2*cos(psi_2))*sin(psi_1) - l_h*m_trailer*(-\\ddot{\\psi_1}*l_h*cos(psi_1) - \\ddot{\\psi_2}*l_f_2*cos(psi_2) + \\ddot{y} + \\dot{\\psi_1}**2*l_h*sin(psi_1) + \\dot{\\psi_2}**2*l_f_2*sin(psi_2))*cos(psi_1)],\n",
+       "[l_f_2*m_trailer*(\\ddot{\\psi_1}*l_h*sin(psi_1) + \\ddot{\\psi_2}*l_f_2*sin(psi_2) + \\ddot{x} + \\dot{\\psi_1}**2*l_h*cos(psi_1) + \\dot{\\psi_2}**2*l_f_2*cos(psi_2))*sin(psi_2) - l_f_2*m_trailer*(-\\ddot{\\psi_1}*l_h*cos(psi_1) - \\ddot{\\psi_2}*l_f_2*cos(psi_2) + \\ddot{y} + \\dot{\\psi_1}**2*l_h*sin(psi_1) + \\dot{\\psi_2}**2*l_f_2*sin(psi_2))*cos(psi_2)]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = (m_trailer*v_dot_trailer_wor.transpose()*j_trans_trailer).transpose()\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0\\\\0\\\\Izz_{truck} \\ddot{\\psi_1}\\\\0\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[                      0],\n",
+       "[                      0],\n",
+       "[Izz_truck*\\ddot{\\psi_1}],\n",
+       "[                      0]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = (I_alpha_truck.transpose()*j_rot_truck).transpose()\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}0\\\\0\\\\0\\\\Izz_{trailer} \\ddot{\\psi_2}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[                        0],\n",
+       "[                        0],\n",
+       "[                        0],\n",
+       "[Izz_trailer*\\ddot{\\psi_2}]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = (I_alpha_trailer.transpose()*j_rot_trailer).transpose()\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\ddot{x} m_{truck} + m_{trailer} \\left(\\ddot{\\psi_1} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\ddot{\\psi_2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)} + \\ddot{x} + \\dot{\\psi_1}^{2} l_{h} \\cos{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)}\\right)\\\\\\ddot{y} m_{truck} + m_{trailer} \\left(- \\ddot{\\psi_1} l_{h} \\cos{\\left(\\psi_{1} \\right)} - \\ddot{\\psi_2} l_{f 2} \\cos{\\left(\\psi_{2} \\right)} + \\ddot{y} + \\dot{\\psi_1}^{2} l_{h} \\sin{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} \\sin{\\left(\\psi_{2} \\right)}\\right)\\\\Izz_{truck} \\ddot{\\psi_1} + \\ddot{\\psi_1} l_{h}^{2} m_{trailer} + \\ddot{\\psi_2} l_{f 2} l_{h} m_{trailer} \\cos{\\left(\\psi_{1} - \\psi_{2} \\right)} + \\ddot{x} l_{h} m_{trailer} \\sin{\\left(\\psi_{1} \\right)} - \\ddot{y} l_{h} m_{trailer} \\cos{\\left(\\psi_{1} \\right)} + \\dot{\\psi_2}^{2} l_{f 2} l_{h} m_{trailer} \\sin{\\left(\\psi_{1} - \\psi_{2} \\right)}\\\\Izz_{trailer} \\ddot{\\psi_2} + \\ddot{\\psi_1} l_{f 2} l_{h} m_{trailer} \\cos{\\left(\\psi_{1} - \\psi_{2} \\right)} + \\ddot{\\psi_2} l_{f 2}^{2} m_{trailer} + \\ddot{x} l_{f 2} m_{trailer} \\sin{\\left(\\psi_{2} \\right)} - \\ddot{y} l_{f 2} m_{trailer} \\cos{\\left(\\psi_{2} \\right)} - \\dot{\\psi_1}^{2} l_{f 2} l_{h} m_{trailer} \\sin{\\left(\\psi_{1} - \\psi_{2} \\right)}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[                                                                             \\ddot{x}*m_truck + m_trailer*(\\ddot{\\psi_1}*l_h*sin(psi_1) + \\ddot{\\psi_2}*l_f_2*sin(psi_2) + \\ddot{x} + \\dot{\\psi_1}**2*l_h*cos(psi_1) + \\dot{\\psi_2}**2*l_f_2*cos(psi_2))],\n",
+       "[                                                                            \\ddot{y}*m_truck + m_trailer*(-\\ddot{\\psi_1}*l_h*cos(psi_1) - \\ddot{\\psi_2}*l_f_2*cos(psi_2) + \\ddot{y} + \\dot{\\psi_1}**2*l_h*sin(psi_1) + \\dot{\\psi_2}**2*l_f_2*sin(psi_2))],\n",
+       "[        Izz_truck*\\ddot{\\psi_1} + \\ddot{\\psi_1}*l_h**2*m_trailer + \\ddot{\\psi_2}*l_f_2*l_h*m_trailer*cos(psi_1 - psi_2) + \\ddot{x}*l_h*m_trailer*sin(psi_1) - \\ddot{y}*l_h*m_trailer*cos(psi_1) + \\dot{\\psi_2}**2*l_f_2*l_h*m_trailer*sin(psi_1 - psi_2)],\n",
+       "[Izz_trailer*\\ddot{\\psi_2} + \\ddot{\\psi_1}*l_f_2*l_h*m_trailer*cos(psi_1 - psi_2) + \\ddot{\\psi_2}*l_f_2**2*m_trailer + \\ddot{x}*l_f_2*m_trailer*sin(psi_2) - \\ddot{y}*l_f_2*m_trailer*cos(psi_2) - \\dot{\\psi_1}**2*l_f_2*l_h*m_trailer*sin(psi_1 - psi_2)]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e = a+b+c+d\n",
+    "e.simplify()\n",
+    "e"
    ]
   },
   {
